@@ -92,6 +92,9 @@
   from the number of classes present in the training data. (See {ml-pull}1144[#1144].)
 * Change data frame analytics instrumentation timestamp resolution to milliseconds. (See 
   {ml-pull}1237[#1237].)
+* Fix "autodetect process stopped unexpectedly: Fatal error: 'terminate called after
+  throwing an instance of 'std::bad_function_call'". (See {ml-pull}1246[#1246],
+  issue: {ml-issue}1245[#1245].)
 
 == {es} version 7.7.0
 
